refactoring to dbsyncapi
